--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^3.0.0"
+    "@react-icons/all-files": "^4.1.0",
+    "@stencil/core": "^3.0.0",
+    "flowbite": "^1.6.3",
+    "stencil": "^0.0.5"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
-    "puppeteer": "^19.5.2"
+    "puppeteer": "^19.5.2",
+    "stencil-tailwind-plugin": "^1.7.0",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   },
   "license": "MIT"
 }
